--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
         </div>
         </div>
         
+        <footer>
+        
+        </footer>
         <!--Scripts para bootstrap -->
         <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
